# opengrid-projects

./: .gitattributes  .gitignore  README.md  coin_hex_bit.scad  multiconnect_drawer.scad  multiconnect_gadget_clamp.scad  multiconnect_gadget_hook.scad  multiconnect_hex_bit.scad  openconnect.scad  openconnect_clamshell_holder.scad  openconnect_drawer.scad  openconnect_drawer_label.scad  openconnect_general_holder.scad  openconnect_gridfinity_shelf.scad  openconnect_horizontal_holder.scad  openconnect_label.scad  openconnect_plate.scad  openconnect_sturdy_hook.scad  openconnect_sturdy_shelf.scad  openconnect_vasemode_container.scad  opengrid_expanding_snap.scad  opengrid_framefit_hook.scad  opengrid_framefit_hook_new.scad  opengrid_parametric_snap.scad  opengrid_snap_gadget_clip.scad  opengrid_snap_gadget_hook.scad  opengrid_snap_gadget_plier_holder.scad  pyproject.toml
annotation_renderer/: README.md  REFERENCE.md  USAGE.md  __init__.py  __main__.py  animation.py  annotation_config.py  blender_runtime.py  blender_scene.py  cache.py  catalog.py  cli.py  commands.py  config.py  config_defaults.py  config_loader.py  config_resolution.py  config_schema.py  config_validation.py  diagnostics.py  gallery.py  metadata.py  openscad.py  overlay.py  paths.py  pipeline.py  scad_annotations.py  scad_discovery.py  scene_cli.py
include/: openconnect_lib.scad  opengrid_snap_lib.scad  opengrid_snap_threads_lib.scad  util_lib.scad
lib/: annotation_metadata.scad  openconnect_lib.scad  opengrid_base.scad  opengrid_snap_lib.scad  opengrid_snap_threads_lib.scad  opengrid_threads_lib.scad  opengrid_variable.scad  util_lib.scad
(+129 files in other folders)
