[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "opengrid-annotation-renderer"
version = "0.1.0"
description = "OpenSCAD-to-Blender annotation renderer for OpenGrid technical images"
readme = "annotation_renderer/README.md"
requires-python = ">=3.10"
dependencies = [
  "Pillow>=10",
  "PyYAML>=6.0"
]

[project.optional-dependencies]
test = [
  "pytest>=9"
]
mesh = [
  "numpy>=1.26.4",
  "rtree>=1.4",
  "scipy>=1.11",
  "trimesh>=4.0"
]

[project.scripts]
opengrid-annotate = "annotation_renderer.scene_cli:main"

[tool.setuptools]
packages = ["annotation_renderer"]

[tool.setuptools.package-data]
annotation_renderer = [
  "*.md",
  "assets/*.stl",
  "assets/scenes/*.blend",
  "configs/*.yaml",
  "configs/*.yml",
  "schemas/*.json"
]
